<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tire Pressure Android</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title">Tire Pressure</string>
    <string name="connection_mode_online">&#160;Online</string>
    <string name="connection_mode_offline">&#160;Offline</string>
    <string name="dialog_title_alert">Alert</string>
    <string name="dialog_msg_offline">You are offline</string>
    <string name="dialog_msg_retrieving_data">Retrieving data&#8230;</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="look_up_title">Tire Pressure Look Up</string>
    <string name="look_up_promt_year">Select Year</string>
    <string name="look_up_promt_make">Select Make</string>
    <string name="look_up_promt_model">Select Model</string>
    <string name="look_up_promt_submodel">Select Submodel</string>
    <string name="look_up_button_find_tire_pressure">Find Tire Pressure</string>
    <string name="tire_pressure_title">Tire Pressure Results</string>
    <string name="tire_pressure_header">The tire pressure below are for:</string>
    <string name="tire_pressure_proper_tire_inflation">Proper Tire Inflation:</string>
    <string name="tire_pressure_frb">Front / Rear / Both:</string>
    <string name="tire_pressure_size">Size:</string>
    <string name="tire_pressure_speed_rating">Speed Rating:</string>
    <string name="tire_pressure_front_inflation">Front Inflation (PSI):</string>
    <string name="tire_pressure_rear_inflation">Rear Inflation (PSI):</string>
    <string name="tire_pressure_standart_optional">Standart / Optional:</string>
    <string name="tire_pressure_vehtype">Vehtype:</string>
    <string name="tire_pressure_cross_section">Cross Section:</string>
    <string name="tire_pressure_aspect">Aspect:</string>
    <string name="tire_pressure_rim_size">Rim Size:</string>
    <string name="texttext">Android 4.3 is now available with a variety of performance improvements and new features./nFor developers, the new platform adds support for OpenGL ES 3.0, connectivity with Bluetooth Smart devices and sensors, support for restricted profiles, a modular DRM framework, new profiling tools, and more.</string>

    <!-- <string name=""></string> -->

</resources>